--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <article>
             <div class="mask1">
-            <img src="images/foto-mijzelf.png" alt="foto van mij met sunset">
+            <img src="images/sabrina-portret-2.JPG" alt="foto van mij met sunset">
             </div>
             <h1> Welkom! Ik ben Sabrina Zuurbier, tweedejaars student CMD. </h1> 
         </article>
