--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -20,38 +20,30 @@
     <main>
         <section class="projecten">
             <h1>Mijn projecten</h1>
-            <p>Een aantal projecten uit mijn eerste jaar CMD.</p>
+            <p>Pollutionparty</p>
             <img src="images/projecten-swirl.png" alt="Achtergrond swirls">
         </section>
         <section class="containerprojecten">
-            <div class="cardBox">
-                <div class="card">
-                  <div class="front">
-                    <img src="images/mockup-zoekeenboek.png" alt="project zoek een boek afbeelding"> 
-                  </div>
-                  <div class="back">
-                    <h3>Project: Zoek een boek</h3>
-                    <p>Een combinatie van de Amsterdamse stijl en de bibliotheek.</p>
-                    <!-- <a href="#">Button 1</a> Denk niet per se nodig???-->
-                  </div>
-                </div>
-              </div>
-
               <div class="cardBox">
                 <div class="card">
                   <div class="front">
                     <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
                   </div>
                   <div class="back">
-                    <h3>Pollution party</h3>
-                    <p>Een groepsproject waarbij een fysieke product moesten maken, pollution is een kaartspel waarbij de mensen bewust worden gemaakt van hoe vervuilend zij bezig zijn.</p>
+                    <img src="images/speelkaarten-pollutionparty.png" alt="mockup van kaarten">
                     <!-- <a href="#">Button 1</a> Denk niet per se nodig???-->
-                    <a href="pollutionparty.html">Meer informatie...</a>
                   </div>
                 </div>
-              </div>
-      
+            </div>
             <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
+             <div class="uitlegpollution">
+                <p>Pollution party was een groepsopdracht waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
+                    Pollution party is uiteindelijk een kaarspel geworden waarbij mensen bewust worden gemaakt van vervuiling.</p>
+
+                <p>Werking van het spel: Het werkt als kwartet, maar heb een hele reeks aan vervuilende sets en schoonmaak sets. Deze staat complementair aan bepaalde onderwerpen. 
+                    Elke set heeft zijn eigen plus of min punten, waardoor je de ander een set kan geven die vervuilend is en zij minpunten krijgen. 
+                    Processss.......</p>
+             </div>
         </section>
     </main>
     <footer>
