--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
             <h1>Contact</h1>
             <img src="images/contact-swirls.png" alt="Contact pagina met achtergrond swirls">
         </section> 
-        <div class="contactform" action="send_email.php" method="post"> 
+        <div class="contactform"> 
             <!-- De action button heb ik van Blackbox.ai met als prompt: "how to create a form in html and receive what the users 
              id requesting in your e-mail, does this work with a PHP code?" -->
             <!-- Deze code heb ik van w3Schools: https://www.w3schools.com/howto/howto_css_contact_form.asp -->
-            <form action="code.php">
+            <form action="send_email.php" method="post">
         
             <label for="fname">First Name</label>
             <input type="text" name="firstname" placeholder="Jouw voornaam...">
