--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -36,7 +36,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="cardBox">
                 <div class="card">
                   <div class="front">
@@ -44,13 +43,13 @@
                   </div>
                   <div class="back">
                     <h3>Pollution party</h3>
-                    <p>Een groepsproject waarbij een fysieke product moesten maken, pollution is een kaartspel waarbij de mensen bewust worden gemaakt van hoe vervuilend zij bezig zijn.</p>
-                    <!-- <a href="#">Button 1</a> Denk niet per se nodig???-->
-                    <a href="pollutionparty.html">Meer informatie...</a>
+                    <p>Een groepsproject waarbij een fysieke product moesten maken, pollution is een kaartspel waarbij de mensen bewust worden gemaakt van hoe vervuilend zij bezig zijn.
+                      <br> </br>
+                      <a href="pollutionparty.html">Meer informatie...</a>
+                    </p>
                   </div>
                 </div>
               </div>
-      
             <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
         </section>
     </main>
