--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mijn projecten</title>
+    <title>Pollution party</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -38,7 +38,8 @@
             <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
              <div class="uitlegpollution">
                 <p>Pollution party was een groepsopdracht waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
-                    Pollution party is uiteindelijk een kaarspel geworden waarbij mensen bewust worden gemaakt van vervuiling.</p>
+                    Pollution party is uiteindelijk een kaarspel geworden waarbij mensen bewust worden gemaakt van vervuiling.
+                    Daarbij was het ook de bedoeling om een bepaalde waarde aan toe te voegen en in dit geval was dit voornamelijk ecologische waarde.</p>
 
                 <p>Werking van het spel: Het werkt als kwartet, maar heb een hele reeks aan vervuilende sets en schoonmaak sets. Deze staat complementair aan bepaalde onderwerpen. 
                     Elke set heeft zijn eigen plus of min punten, waardoor je de ander een set kan geven die vervuilend is en zij minpunten krijgen. 
