--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,13 @@
             <h1>Contact</h1>
             <img src="images/contact-swirls.png" alt="Contact pagina met achtergrond swirls">
             <div>
-                <p>Sabrina Zuurbier</p>
-                <p>sj.zuurbier@gmail.com</p>
-                <p>06....</p>
+                <ul>Sabrina Zuurbier</ul>
+                <ul>sj.zuurbier@gmail.com</ul>
+                <ul>06....</ul>
+                <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+                    " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
             </div>
         </section> 
-        <section>
-            <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-                " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
-        </section>
     </main>
     <footer>
         <ul>
