--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -18,23 +18,15 @@
         </nav>
     </header>
     <main>
-        <section class="projecten">
+        <section class="projecten2">
             <h1>Mijn projecten</h1>
-            <p>Pollutionparty</p>
+            <h2>Pollutionparty</h2>
             <img src="images/projecten-swirl.png" alt="Achtergrond swirls">
         </section>
-        <section class="containerprojecten">
-              <div class="cardBox">
-                <div class="card">
-                  <div class="front">
-                    <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
-                  </div>
-                  <div class="back">
-                    <img src="images/speelkaarten-pollutionparty.png" alt="mockup van kaarten">
-                    <!-- <a href="#">Button 1</a> Denk niet per se nodig???-->
-                  </div>
-                </div>
+            <div class="pollution">
+                <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
             </div>
+            
             <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
              <div class="uitlegpollution">
                 <p>Pollution party was een groepsopdracht waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
