extra java toegevoegd

--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -24,7 +24,7 @@
             <img src="images/projecten-swirl.png" alt="Achtergrond swirls">
         </section>
             <div class="pollution">
-                <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
+                <img class="pollutionafbeelding" src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
             </div>
             
             <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
@@ -46,5 +46,6 @@
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
