--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
-                <li><a href="mijnwerk.html">Mijn werk</a></li>
+                <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
             <img src="images/contact-swirls.png" alt="Contact pagina met achtergrond swirls">
             <img src="images/plant-beige-light.png" alt="beige blad">
             <h2>Meer over mij en wat zoek ik?</h2>
-            <p>Ik ben 21 jarige, tweedejaarsstudent op de opleiding communication and multimedia design. Ik zal mijzelf omschrijven als een leergierig, ambiteus en iemand die initiatief zal nemen.
+            <p>Ik ben 21 jarige, tweedejaarsstudent op de opleiding communication and multimedia design. Ik zal mijzelf omschrijven als een leergierig, ambiteus en iemand die initiatief zal nemen. 
                 Voor mijn tweede jaar ben ik opzoek naar een stage van tien weken. Bij een bedrijf dat mij een mogelijkheid kan bieden om mij verder te ontwikkelen met coderen, maar ook op visueel vlak.
                 Graag zoek ik een plek die mij deze begeleiding kan bieden en natuurlijk een gezellige sfeer heeft. </p>
             <img src="images/plant-brown.png" alt="bruine blad">
