--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
-                <li><a href="mijnwerk.html">Mijn werk</a></li>
+                <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
         </nav>
     </header>
@@ -30,9 +30,12 @@
                     <img src="images/mockup-zoekeenboek.png" alt="project zoek een boek afbeelding"> 
                   </div>
                   <div class="back">
-                    <h3>Project: Zoek een boek</h3>
-                    <p>Een combinatie van de Amsterdamse stijl en de bibliotheek.</p>
-                    <!-- <a href="#">Button 1</a> Denk niet per se nodig???-->
+                    <h3>Zoek een boek</h3>
+                    <p> Voor de onderbouw van een middelbare school een interface ontwerpen, waarbij ze via een Ipad een
+                      overzicht kregen van boeken die zij kunnen gaan lezen.
+                      <br> </br>
+                      <a href= "zoekeenboek.html">Meer informatie...</a>
+                   </p>
                   </div>
                 </div>
               </div>
@@ -43,7 +46,8 @@
                   </div>
                   <div class="back">
                     <h3>Pollution party</h3>
-                    <p>Een groepsproject waarbij een fysieke product moesten maken, pollution is een kaartspel waarbij de mensen bewust worden gemaakt van hoe vervuilend zij bezig zijn.
+                    <p>Een groepsproject waarbij er een fysiek product is gemaakt, 
+                      met als doel bewust maken van vervuiling.
                       <br> </br>
                       <a href="pollutionparty.html">Meer informatie...</a>
                     </p>
