--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
-                <li><a href="mijnwerk.html">Mijn werk</a></li>
+                <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
         </nav>
     </header>
@@ -47,8 +47,7 @@
         <br>  
             <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
              <div class="uitlegpollution">
-                <h1>Mijn projecten</h1>
-                <h2>Pollutionparty</h2>
+                <h1>Pollutionparty</h1>
                 <p>Pollution party was een groepsopdracht waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
                     Pollution party is uiteindelijk een kaarspel geworden waarbij mensen bewust worden gemaakt van vervuiling.
                     Daarbij was het ook de bedoeling om een bepaalde waarde aan toe te voegen en in dit geval was dit voornamelijk ecologische waarde.</p>
