--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
-                <li><a href="mijnwerk.html">Mijn werk</a></li>
+                <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
         </nav>
     </header>
@@ -21,7 +21,7 @@
         <section class="contact">
             <h1>Contact</h1>
             <img src="images/contact-swirls.png" alt="Contact pagina met achtergrond swirls">
-            <div>
+            <div class="contactlist">
                 <ul>Sabrina Zuurbier</ul>
                 <ul>sj.zuurbier@gmail.com</ul>
                 <ul>06....</ul>
