--- a/mijnwerk.html
+++ b/mijnwerk.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
-                <li><a href="mijnwerk.html">Mijn werk</a></li>
+                <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
         </nav>
     </header>
