--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,14 @@
             <h1>Contact</h1>
             <img src="images/contact-swirls.png" alt="Contact pagina met achtergrond swirls">
             <div class="contactlist">
-                <ul>Sabrina Zuurbier</ul>
-                <ul>sj.zuurbier@gmail.com</ul>
-                <ul>06....</ul>
-                <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+                <ul>
+                    <li>Sabrina Zuurbier</li>
+                    <li>sj.zuurbier@gmail.com</li>
+                    <li>06....</li>
+                    <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                     " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
+                </ul>
+       
             </div>
         </section> 
     </main>
