nieuwe portfolio design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio Sabrina</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
     <header>
         <nav>
             <ul>
@@ -18,20 +18,27 @@
         </nav>
     </header>
     <main>
-        <article>
-            <div class="mask1">
-            <img src="images/sabrina-portret-2.JPG" alt="foto van mij met sunset">
-            </div>
-            <h1> Welkom! Ik ben Sabrina Zuurbier, tweedejaars student CMD. </h1> 
-        </article>
-        <section class="about-me">
-            <img src="images/contact-swirls.png" alt="Contact pagina met achtergrond swirls">
-            <img src="images/plant-beige-light.png" alt="beige blad">
+        <section>
+            <div>
+                 <h1> Hi! Ik ben Sabrina Zuurbier </h1> 
+                <p>Tweedejaars student CMD.</p>
+                <button>Projecten</button>
+                <ul>
+                    <!--logo van vscode: https://code.visualstudio.com/brand -->
+                    <li><img src="images/vscode.png" alt="Logo van vscode"> </li>
+                    <!--Logo van figma van: https://www.figma.com/community/file/1252952214981489076 -->
+                    <li><img src="images/figma-logo.png" alt="Het logo van figma"></li>
+                </ul>
+             </div>
+            <img src="images/sabrina-portret.JPG" alt="foto van mij met sunset">
+        </section>
+        <section>
             <h2>Meer over mij en wat zoek ik?</h2>
             <p>Ik ben 21 jarige, tweedejaarsstudent op de opleiding communication and multimedia design. Ik zal mijzelf omschrijven als een leergierig, ambiteus en iemand die initiatief zal nemen. 
                 Voor mijn tweede jaar ben ik opzoek naar een stage van tien weken. Bij een bedrijf dat mij een mogelijkheid kan bieden om mij verder te ontwikkelen met coderen, maar ook op visueel vlak.
                 Graag zoek ik een plek die mij deze begeleiding kan bieden en natuurlijk een gezellige sfeer heeft. </p>
-            <img src="images/plant-brown.png" alt="bruine blad">
+            <!-- <img src="images/plant-brown.png" alt="bruine blad"> 
+            <img src="images/plant-beige-light.png" alt="beige blad"> -->
         </section> 
     </main>
     <footer>
