--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -6,7 +6,7 @@
     <title>Mijn projecten</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="mijnprojectenpagina">
     <header>
         <nav>
             <ul>
@@ -18,43 +18,40 @@
         </nav>
     </header>
     <main>
-        <section class="projecten">
+        <section>
             <h1>Mijn projecten</h1>
-            <p>Een aantal projecten uit mijn eerste jaar CMD.</p>
-            <img src="images/projecten-swirl.png" alt="Achtergrond swirls">
-        </section>
-        <section class="containerprojecten">
-            <div class="cardBox">
-                <div class="card">
-                  <div class="front">
-                    <img src="images/mockup-zoekeenboek.png" alt="project zoek een boek afbeelding"> 
-                  </div>
-                  <div class="back">
-                    <h3>Zoek een boek</h3>
-                    <p> Voor de onderbouw van een middelbare school een interface ontwerpen, waarbij ze via een Ipad een
-                      overzicht kregen van boeken die zij kunnen gaan lezen.
-                      <br> </br>
-                      <a href= "zoekeenboek.html">Meer informatie...</a>
-                   </p>
-                  </div>
-                </div>
-              </div>
-              <div class="cardBox">
-                <div class="card">
-                  <div class="front">
-                    <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
-                  </div>
-                  <div class="back">
-                    <h3>Pollution party</h3>
-                    <p>Een groepsproject waarbij er een fysiek product is gemaakt, 
-                      met als doel bewust maken van vervuiling.
-                      <br> </br>
-                      <a href="pollutionparty.html">Meer informatie...</a>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
+            <p>Een aantal projecten tot nu toe bij de opleiding CMD.</p>
+        <article>
+          <a href="zoekeenboek.html">
+            <img src="images/zoek-een-boek-slide4.png" alt="project zoek een boek afbeelding"> 
+            <div>
+              <h2>Zoek een boek</h2>
+              <p> Voor de onderbouw van een middelbare school een interface ontwerpen, waarbij ze via een Ipad een
+              overzicht kregen van boeken die zij kunnen gaan lezen.</p>
+            </div>
+          </a>
+         </article>
+        <article>
+          <a href="pollutionparty.html">
+            <div>
+                <h2>Pollution party</h2>
+                <p>Een groepsproject waarbij er een fysiek product is gemaakt, 
+                  met als doel bewust maken van vervuiling.</p>
+            </div> 
+            <img src="images/pollution-party.png" alt="project passie project pollution party">
+          </a>
+        </article>
+        <article>
+          <a href="mojo.html">
+            <img src="images/mojo-project.png" alt="Afbeelding van het namaken van de website van Mojo">
+            <div>
+              <h2>Recreate Mojo website</h2>
+              <p>Voor het vak front end devolpment kregen wij de opdracht om een site zo goed mogelijk na te maken, daarnaast 
+                was het de bedoeling om de site responsive te maken.
+              </p>
+            </div>
+          </a>
+        </article>
         </section>
     </main>
     <footer>
