--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="contactpagina">
     <header>
         <nav>
             <ul>
@@ -18,10 +18,8 @@
         </nav>
     </header>
     <main>
-        <section class="contact">
+        <section>
             <h1>Contact</h1>
-            <img src="images/contact-swirls.png" alt="Contact pagina met achtergrond swirls">
-            <div class="contactlist">
                 <ul>
                     <li>Sabrina Zuurbier</li>
                     <li>sj.zuurbier@gmail.com</li>
@@ -29,8 +27,6 @@
                     <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                     " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
                 </ul>
-       
-            </div>
         </section> 
     </main>
     <footer>
