--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -6,7 +6,7 @@
     <title>Zoek een boek</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="zoekeenboek">
     <header>
         <nav>
             <ul>
@@ -18,26 +18,26 @@
         </nav>
     </header>
     <main>
-        <section class="projecten2">
-            <img src="images/projecten-swirl.png" alt="Achtergrond swirls">
-        </section>
-        <iframe class="zebinterface" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/AdajvjPCwJ3RkUIXZofXSu/Zoek-een-boek?page-id=0%3A1&node-id=0-1156&node-type=frame&viewport=1103%2C447%2C0.06&scaling=scale-down&content-scaling=fixed&embed-host=share" allowfullscreen></iframe>
-        <br>  
-            <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
-             <div class="uitlegpollution">
-                <h1>Zoek een boek</h1>
-                <p>Probeer het hierboven uit.</p>
-                <p>
-                    Tijdens dit project werden wij uitgedaagd om de stijlen van de Amsterdamse website en de bibliotheek te combineren. Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
+        <a href="mijnprojecten.html">terug</a>
+        <section>
+            <img src="images/zoek-een-boek.png" alt="Afbeelding van het eerste scherm van Zoek een boek, met een aantal boeken en een plant">
+            <h1>Zoek een boek</h1>
+                 <p> Tijdens dit project werden wij uitgedaagd om de stijlen van de Amsterdamse website en de bibliotheek te combineren. Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
                     aansporen/ helpen bij het kiezen van een leesboek. 
                     Daarnaast was het ook de opdracht om een animatie toe te voegen aan het design. Deze is te zien bij een van de laatste pagins's in het bestand hierboven. 
+                 </p>
+                <br>
+                <p>Dit ging niet zonder slag of stoot, omdat het visuele beeld van Amsterdam best wel clean en recht toe recht aan is, had ik in eerste
+                    instantie moeite met het aantrekkelijk maken voor kinderen. Uiteindelijk door feedback te vragen aan andere heb ik veel dingen uitgeprobeerd,
+                    waarvan dit design het beste werkte. 
                 </p>
-                    <br>
-                <p>Dit ging niet zonder slag of stoot, processss....
-                </p>
-             </div>
         </section>
-    </main>
+        <section>
+            <h2>Probeer het hieronder uit</h2>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/AdajvjPCwJ3RkUIXZofXSu/Zoek-een-boek?page-id=0%3A1&node-id=0-1156&node-type=frame&viewport=1103%2C447%2C0.06&scaling=scale-down&content-scaling=fixed&embed-host=share" allowfullscreen></iframe> 
+        </section>
+            <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
+     </main>       
     <footer>
         <ul>
             <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
