--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -26,8 +26,7 @@
             <img src="images/zoek-een-boek-slide4.png" alt="project zoek een boek afbeelding"> 
             <div>
               <h2>Zoek een boek</h2>
-              <p> Voor de onderbouw van een middelbare school een interface ontwerpen, waarbij ze via een Ipad een
-              overzicht kregen van boeken die zij kunnen gaan lezen.</p>
+              <p>Visual interface design, UI</p>
             </div>
           </a>
          </article>
@@ -35,8 +34,7 @@
           <a href="pollutionparty.html">
             <div>
                 <h2>Pollution party</h2>
-                <p>Een groepsproject waarbij er een fysiek product is gemaakt, 
-                  met als doel bewust maken van vervuiling.</p>
+                <p>Groepsproject, fysiek product</p>
             </div> 
             <img src="images/pollution-party.png" alt="project passie project pollution party">
           </a>
@@ -46,9 +44,7 @@
             <img src="images/mojo-project.png" alt="Afbeelding van het namaken van de website van Mojo">
             <div>
               <h2>Recreate Mojo website</h2>
-              <p>Voor het vak front end devolpment kregen wij de opdracht om een site zo goed mogelijk na te maken, daarnaast 
-                was het de bedoeling om de site responsive te maken.
-              </p>
+              <p>Front end development, html, css, javascript</p>
             </div>
           </a>
         </article>
