--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -27,12 +27,16 @@
                     <br>
                 <p>Werking van het spel: Het werkt als kwartet, maar heb een hele reeks aan vervuilende sets en schoonmaak sets. Deze staat complementair aan bepaalde onderwerpen. 
                     Elke set heeft zijn eigen plus of min punten, waardoor je de ander een set kan geven die vervuilend is en zij minpunten krijgen. 
-                    
                 </p>
        </section>
         <section>
             <h2>Visueel beeld bij dit project</h2>
             <img src="images/pollution-party.png" alt="Afbeelding van reclame van het spel">
+        </section>
+        <section>
+            <!-- nog afmaken -->
+            <h2>Proces</h2>
+            <p>Tijdens dit project hebben wij onderzoek gedaan naar een duurzaam element. </p>
         </section>
     </main>
     <footer>
