--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <ul>
                     <!--logo van vscode: https://code.visualstudio.com/brand -->
                     <li><img src="images/vscode.png" alt="Logo van vscode"> </li>
+                      <!-- https://github.com/logos -->
+                      <li><img src="images/github-mark.png" alt="Het logo van github"></li>
                     <!--Logo van figma van: https://www.figma.com/community/file/1252952214981489076 -->
                     <li><img src="images/figma-logo.png" alt="Het logo van figma"></li>
                 </ul>
