--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -20,7 +20,7 @@
     <main>
         <section>
             <h1>Mijn projecten</h1>
-            <p>Een aantal projecten tot nu toe bij de opleiding CMD.</p>
+            <p>Een aantal projecten tijdens de opleiding CMD.</p>
         <article>
           <a href="zoekeenboek.html">
             <img src="images/zoek-een-boek-slide4.png" alt="project zoek een boek afbeelding"> 
