--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -19,8 +19,11 @@
     </header>
     <main>
         <section>
-            <h1>Mijn projecten</h1>
+          <div>
+           <h1>Mijn projecten</h1>
             <p>Een aantal projecten tijdens de opleiding CMD.</p>
+          </div>
+          <div>
         <article>
           <a href="zoekeenboek.html">
             <img src="images/zoek-een-boek-slide4.png" alt="project zoek een boek afbeelding"> 
@@ -32,22 +35,23 @@
          </article>
         <article>
           <a href="pollutionparty.html">
+            <img src="images/pollution-party.png" alt="project passie project pollution party">
             <div>
                 <h2>Pollution party</h2>
                 <p>Groepsproject, fysiek product</p>
             </div> 
-            <img src="images/pollution-party.png" alt="project passie project pollution party">
           </a>
         </article>
         <article>
           <a href="mojo.html">
-            <img src="images/mojo-project.png" alt="Afbeelding van het namaken van de website van Mojo">
+            <img src="images/mojo-landscape.png" alt="Afbeelding van het namaken van de website van Mojo">
             <div>
               <h2>Recreate Mojo website</h2>
               <p>Front end development, html, css, javascript</p>
             </div>
           </a>
         </article>
+      </div>
         </section>
     </main>
     <footer>
