--- a/mojo.html
+++ b/mojo.html
@@ -21,19 +21,32 @@
         <a href="mijnprojecten.html">terug</a>
        <section>
          <h1>Recreating the mojo website</h1>
+        <img src="images/mojo-landscape.png" alt="Mojo site maar dan lanscape op laptop scherm">
+         <article>
+            <h2>Opdracht</h2> 
+            <p>
+             Voor het vak front end development moesten wij een website uitkiezen en deze zo goed als namaken, er werd van ons verwacht dat wij of de hele site
+            responsive maakte of op gebied van de visuele representatie van de site dingen zouden toevoegen. Ik heb ervoor gekozen om de site responsive te maken,
+            dit omdat het goed is voor mijn ontwikkeling als ik verder wil met frond end development. 
+            * Alle code die ik hiervoor heb gebruikt komt van de site mojo en is dus geen eigen content geweest.
+            </p>
+            <p>
+                Daarmaast hebben wij tijdens dit vak gebrukt gemaakt van de screenreader en hoe toegankelijk een website is.
+            </p>
+            </article>
+            <article>
+                 <h2>Idee</h2>
+                 <p>Als extra toevoegingen had ik om een has selector te gebruiken en daar dan een leuke animatie aan toe te voegen. Nu als je bij genres en dan disco aanvinkt dan
+                    krijgt de achtergond een gradient animatie.
+                 </p>
+            </article>
+            <article>
+                <h2>Proces</h2>
                 <p>
-                    Voor het vak front end development moesten wij een website uitkiezen en deze zo goed als namaken, er werd van ons verwacht dat wij of de hele site
-                    responsive maakte of op gebied van de visuele representatie van de site dingen zouden toevoegen. Ik heb ervoor gekozen om de site responsive te maken,
-                    dit omdat het goed is voor mijn ontwikkeling als ik verder wil met frond end development. 
-                    * Alle code die ik hiervoor heb gebruikt komt van de site mojo en is dus geen eigen content geweest.
+                Het lastigste vond ik dat zodra er een fout in de code staat of je wilde iets veranderen, maar dat dat niet meteen werkte. Ik moet mij daar nog een weg in vinden en
+                natuurlijk veel oefenen door code te blijven schrijven, zodat ik er bekender in word.
                 </p>
-                <p>
-                    Daarmaast hebben wij tijdens dit vak gebrukt gemaakt van de screenreader en hoe toegankelijk een website is.
-                </p>
-                <p>
-                    Het lastigste vond ik dat zodra er een fout in de code staat of je wilde iets veranderen, maar dat dat niet meteen werkte. Ik moet mij daar nog een weg in vinden en
-                    natuurlijk veel oefenen door code te blijven schrijven, zodat ik er bekender in word.
-                </p>
+            </article>     
        </section>
         <section>
             <h2>Visueel beeld bij dit project</h2>
