--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -20,23 +20,34 @@
     <main>
         <a href="mijnprojecten.html">terug</a>
        <section>
-         <h1>Pollutionparty</h1>
-                <p>Pollution party was een groepsopdracht waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
-                    Pollution party is uiteindelijk een kaarspel geworden waarbij mensen bewust worden gemaakt van vervuiling.
-                    Daarbij was het ook de bedoeling om een bepaalde waarde aan toe te voegen en in dit geval was dit voornamelijk ecologische waarde.</p>
-                    <br>
-                <p>Werking van het spel: Het werkt als kwartet, maar heb een hele reeks aan vervuilende sets en schoonmaak sets. Deze staat complementair aan bepaalde onderwerpen. 
+        <div>
+            <h1>Pollutionparty</h1>
+         <img src="images/pollution-party.png" alt="Afbeelding van reclame van het spel">
+        </div>
+         <article>
+            <h2>Opdracht</h2>
+            <p>Pollution party was een groepsopdracht waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
+                Daarbij was het ook de bedoeling om een bepaalde waarde aan toe te voegen en in dit geval was dit voornamelijk ecologische waarde.</p>
+         </article>
+         <article>
+            <h2>Idee</h2>
+            <p> Pollution party is uiteindelijk een kaarspel geworden waarbij mensen bewust worden gemaakt van vervuiling.
+                Werking van het spel: Het werkt als kwartet, maar heb een hele reeks aan vervuilende sets en schoonmaak sets. Deze staat complementair aan bepaalde onderwerpen. 
                     Elke set heeft zijn eigen plus of min punten, waardoor je de ander een set kan geven die vervuilend is en zij minpunten krijgen. 
                 </p>
+         </article>
+         <article>
+            <h2>Proces</h2>
+            <p>We hebben tijdens het proces veel iteraties gemaakt, we waren bijvoorbeeld in eerste instantie van plan om er een bordspel van te maken,
+                alleen omdat we de link tussen de kaarten en het bord niet goed op orde konden krijgen hebben we het bord weggelaten.
+            </p>
+         </article>
+                
        </section>
         <section>
             <h2>Visueel beeld bij dit project</h2>
-            <img src="images/pollution-party.png" alt="Afbeelding van reclame van het spel">
-        </section>
-        <section>
-            <!-- nog afmaken -->
-            <h2>Proces</h2>
-            <p>Tijdens dit project hebben wij onderzoek gedaan naar een duurzaam element. </p>
+            <img src="images/pollution-2-slides.png" alt="De kaarten die Sabrina heeft geillustreerd">
+            <p>Dit zijn de kaarten uit het spel die ik heb geillustreerd</p>
         </section>
     </main>
     <footer>
