--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -20,17 +20,27 @@
     <main>
         <a href="mijnprojecten.html">terug</a>
         <section>
-            <img src="images/zoek-een-boek.png" alt="Afbeelding van het eerste scherm van Zoek een boek, met een aantal boeken en een plant">
             <h1>Zoek een boek</h1>
+            <img src="images/zoek-een-boek.png" alt="Afbeelding van het eerste scherm van Zoek een boek, met een aantal boeken en een plant">
+            <article>
+               <h2>Opdracht</h2>
                  <p> Tijdens dit project werden wij uitgedaagd om de stijlen van de Amsterdamse website en de bibliotheek te combineren. Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
-                    aansporen/ helpen bij het kiezen van een leesboek. 
-                    Daarnaast was het ook de opdracht om een animatie toe te voegen aan het design. Deze is te zien bij een van de laatste pagins's in het bestand hierboven. 
-                 </p>
-                <br>
-                <p>Dit ging niet zonder slag of stoot, omdat het visuele beeld van Amsterdam best wel clean en recht toe recht aan is, had ik in eerste
+                    aansporen/ helpen bij het kiezen van een leesboek.  
+                 </p> 
+            </article>
+            <article>
+                <h2>Idee</h2>
+                <p>Het idee was dat de kinderen stap voor stap een keuze moesten maken in genre met wat hun aanspraken, daarbij komt er steeds een voorbeeld boek tevoorschijn die dan
+                    ook in die genre thuishoorde. Uiteindelijk als ze alle keuzes hebben gemaakt krijgen ze een overzicht met verschillende genres en boeken die daarbij passen, en kunnen zo 
+                makkelijker een keuze maken. </p>
+             </article>
+            <article>
+                <h2>Proces</h2>
+                 <p>Dit ging niet zonder slag of stoot, omdat het visuele beeld van Amsterdam best wel clean en recht toe recht aan is, had ik in eerste
                     instantie moeite met het aantrekkelijk maken voor kinderen. Uiteindelijk door feedback te vragen aan andere heb ik veel dingen uitgeprobeerd,
                     waarvan dit design het beste werkte. 
                 </p>
+            </article>
         </section>
         <section>
             <h2>Probeer het hieronder uit</h2>
