--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -20,8 +20,11 @@
     <main>
         <a href="mijnprojecten.html">terug</a>
         <section>
+            <div>
             <h1>Zoek een boek</h1>
-            <img src="images/zoek-een-boek.png" alt="Afbeelding van het eerste scherm van Zoek een boek, met een aantal boeken en een plant">
+            <img src="images/zoek-een-boek.png" alt="Afbeelding van het eerste scherm van Zoek een boek, met een aantal boeken en een plant"> 
+            </div>
+           
             <article>
                <h2>Opdracht</h2>
                  <p> Tijdens dit project werden wij uitgedaagd om de stijlen van de Amsterdamse website en de bibliotheek te combineren. Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
