--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,33 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">About me</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
                 <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
         </nav>
     </header>
     <main>
+        <h1>About me</h1>
         <section>
-            <h1>Contact</h1>
+            <img src="images/sabrina-met-camera.JPG" alt="Ik met een foto camera">
+            <div>
+                <h2>Hi, ik ben Sabrina Zuurbier</h2>
+                <p>21 jaar</p>
+                <p> Ik zal mijzelf omschrijven als een leergierig, ambiteus en iemand die initiatief zal nemen. Ik vind het leuk om dingen uit te proberen en meer te leren</p>
+                <p> Voor mijn tweede jaar ben ik opzoek naar een stage van tien weken. Bij een bedrijf dat mij een mogelijkheid kan bieden om mij verder te ontwikkelen met coderen, maar ook op visueel vlak.
+                    Graag zoek ik een plek die mij deze begeleiding kan bieden en natuurlijk een gezellige sfeer heeft.</p>
+                <p>Zelf ben ik graag bezig met mijn handen en vind ik het ontzettend leuk om te tekenen en te verven. Ook probeer ik mij verder te ontwikkelen op het gebied van fotografie en loop daarom ook regelmatig met 
+                    een professionele fotograaf mee.
+                </p>  
+            </div>
+        </section>
+        <section>
+            <h2>Curriculum vitae</h2>
+            <a href="/images/cv-sabrina-zuurbier.pdf" download>Download hier</a>
+        </section>
+        <!-- <section>
+            <h2>contact</h2>
                 <ul>
                     <li>Sabrina Zuurbier</li>
                     <li>sj.zuurbier@gmail.com</li>
@@ -27,7 +45,7 @@
                     <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                     " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
                 </ul>
-        </section> 
+        </section>  -->
     </main>
     <footer>
         <ul>
