--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">About me</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
                 <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
@@ -26,7 +26,7 @@
           <div>
         <article>
           <a href="zoekeenboek.html">
-            <img src="images/zoek-een-boek-slide4.png" alt="project zoek een boek afbeelding"> 
+            <img src="images/mockup-zoekeenboek.png" alt="project zoek een boek afbeelding"> 
             <div>
               <h2>Zoek een boek</h2>
               <p>Visual interface design, UI</p>
@@ -35,7 +35,7 @@
          </article>
         <article>
           <a href="pollutionparty.html">
-            <img src="images/pollution-party.png" alt="project passie project pollution party">
+            <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
             <div>
                 <h2>Pollution party</h2>
                 <p>Groepsproject, fysiek product</p>
@@ -44,14 +44,14 @@
         </article>
         <article>
           <a href="mojo.html">
-            <img src="images/mojo-landscape.png" alt="Afbeelding van het namaken van de website van Mojo">
+            <img src="images/mockup-mojo.png" alt="Afbeelding van het namaken van de website van Mojo">
             <div>
               <h2>Recreate Mojo website</h2>
               <p>Front end development, html, css, javascript</p>
             </div>
           </a>
         </article>
-      </div>
+        </div>
         </section>
     </main>
     <footer>
