--- a/mojo.html
+++ b/mojo.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">About me</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
                 <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
@@ -51,7 +51,8 @@
         <section>
             <h2>Visueel beeld bij dit project</h2>
             <p>Bekijk de gehele site door hieronder op de afbeelding te klikken</p>
-            <a target="_blank" href="https://sabrinaz35.github.io/blok-web-sabrina/"  rel="https://github.com/"><img src="images/mojo-project.png" alt="Afbeelding van het beginscherm"></a>
+            <img src="images/mockup-mojo.png" alt="Mockups met daarin de site ">
+            <a target="_blank" href="https://sabrinaz35.github.io/blok-web-sabrina/"  rel="https://github.com/">Check hier de site</a>
         </section>
     </main>
     <footer>
