--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">About me</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
                 <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
@@ -31,24 +31,60 @@
                     <!--Logo van figma van: https://www.figma.com/community/file/1252952214981489076 -->
                     <li><img src="images/figma-logo.png" alt="Het logo van figma"></li>
                 </ul>
+                <article>
+                    <h2>Meer over mij en wat zoek ik?</h2>
+                    <p>Ik ben 21 jarige, tweedejaarsstudent op de opleiding communication and multimedia design. </p>
+                 </article>
              </div>
             <img src="images/sabrina-portret.JPG" alt="foto van mij met sunset">
         </section>
+
         <section>
-            <h2>Meer over mij en wat zoek ik?</h2>
-            <p>Ik ben 21 jarige, tweedejaarsstudent op de opleiding communication and multimedia design. Ik zal mijzelf omschrijven als een leergierig, ambiteus en iemand die initiatief zal nemen. 
-                Voor mijn tweede jaar ben ik opzoek naar een stage van tien weken. Bij een bedrijf dat mij een mogelijkheid kan bieden om mij verder te ontwikkelen met coderen, maar ook op visueel vlak.
-                Graag zoek ik een plek die mij deze begeleiding kan bieden en natuurlijk een gezellige sfeer heeft. </p>
-            <!-- <img src="images/plant-brown.png" alt="bruine blad"> 
-            <img src="images/plant-beige-light.png" alt="beige blad"> -->
-        </section> 
+            <h2>Projecten</h2>
+            <div>
+          <article>
+            <a href="zoekeenboek.html">
+              <img src="images/mockup-zoekeenboek.png" alt="project zoek een boek afbeelding"> 
+              <div>
+                <h2>Zoek een boek</h2>
+                <p>Visual interface design, UI</p>
+              </div>
+            </a>
+           </article>
+          <article>
+            <a href="pollutionparty.html">
+              <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
+              <div>
+                  <h2>Pollution party</h2>
+                  <p>Groepsproject, fysiek product</p>
+              </div> 
+            </a>
+          </article>
+          <article>
+            <a href="mojo.html">
+              <img src="images/mockup-mojo.png" alt="Afbeelding van het namaken van de website van Mojo">
+              <div>
+                <h2>Recreate Mojo website</h2>
+                <p>Front end development, html, css, javascript</p>
+              </div>
+            </a>
+          </article>
+          </div>
+          </section>
     </main>
     <footer>
+        <ul>
+            <li><a href="index.html"></a>Homepage</li>
+            <li><a href="contact.html"></a>About me</li>
+            <li><a href="mijnprojecten.html"></a>Projecten</li>
+        </ul>
         <ul>
             <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
             <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
+            <li>Created by: Sabrina Zuurbier</li>
         </ul>
+
     </footer>
 </body>
 </html>
