--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">About me</a></li>
                 <li><a href="mijnprojecten.html">Projecten</a></li>
                 <!-- <li><a href="mijnwerk.html">Mijn werk</a></li> -->
             </ul>
